[gd_scene load_steps=10 format=2]

[ext_resource path="res://menuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Font/Xolonium-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Lose.gd" type="Script" id=3]
[ext_resource path="res://bgLast.PNG" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 72
outline_color = Color( 0.670588, 0.109804, 0.109804, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Font/Xolonium-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Font/Xolonium-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = SubResource( 7 )

[node name="Lose" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.07
anchor_bottom = 1.0
margin_right = 1751.0
margin_bottom = 1029.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 311.151
margin_top = 224.136
margin_right = 730.151
margin_bottom = 434.136
custom_fonts/font = SubResource( 2 )
text = "YOU LOSE
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitButton" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 579.967
margin_top = 345.452
margin_right = 624.967
margin_bottom = 370.452
focus_neighbour_top = NodePath("../startButton")
focus_neighbour_bottom = NodePath("../startButton")
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0509804, 0.431373, 0.376471, 1 )
text = "Quit"

[node name="startButton" parent="." instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 408.25
margin_top = 342.905
margin_right = 456.25
margin_bottom = 367.905
focus_neighbour_top = NodePath("../quitButton")
focus_neighbour_bottom = NodePath("../quitButton")
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0509804, 0.431373, 0.376471, 1 )
text = "Restart"

[connection signal="pressed" from="quitButton" to="." method="_on_quitButton_pressed"]
[connection signal="pressed" from="startButton" to="." method="_on_startButton_pressed"]
